k8-resources/session4/deployment-liveness.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: public.ecr.aws/nginx/nginx:1.18.0
        ports:
        - containerPort: 80
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        volumeMounts:
        - name: config
          mountPath: "/etc/nginx/nginx.conf"
          subPath: nginx.conf
          readOnly: true 
      volumes:
      - name: config
        configMap:
          name: nginx-config
          items:
            - key: nginx.conf
              path: nginx.conf
