k8-resources/session4/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-2
  labels:
    name: nginx
spec:
  containers:
  - name: nginx
    image: public.ecr.aws/nginx/nginx:latest
    ports:
    - containerPort: 80
