k8-resources/session4/service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-google
  namespace: default
spec:
  ports:
  - protocol: TCP
    port: 443
  type: ExternalName
  externalName: elpais.com
