k8-resources/session4/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - name: web
      protocol: TCP
      port: 8080
      targetPort: 80
